# BN-ML

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
bn_ml/: backup.py  config.py  dod_checks.py  env.py  exchange.py  hardware.py  model_sync.py  state_store.py  symbols.py  types.py
configs/: bot.yaml
data_manager/: data_cleaner.py  features_engineer.py  fetch_data.py  multi_timeframe.py
docs/: architecture.md  deployment_docker.md  model_sync_github.md  pypi_trusted_publisher.md  runbook_incident.md
ml_engine/: adaptive_trainer.py  drift_monitor.py  predictor.py  santrade_intelligence.py  sequence_model.py  trainer.py  validator.py
monitoring/: alerter.py  dashboard.py  logger.py  realtime_prices.py
public_api/: app.py  data_access.py  metrics.py
scanner/: opportunity_scanner.py  scorer.py
scripts/: check_dod_daily.py  generate_dod_report.py  hardware_probe.py  kill_switch.py  model_sync.py  run_backtest.py  run_bot.py  run_dod_30d.py  run_santrade_intelligence.py  run_trainer.py  run_trainer_auto.py  runpod_train_only.py
tests/: test_adaptive_retrainer.py  test_alerter.py  test_background_retrainer.py  test_backup_manager.py  test_config.py  test_data_manager_paper_market_data.py  test_dod_checks.py  test_drift_monitor.py  test_exit_manager.py  test_hardware.py  test_logger.py  test_model_sync.py  test_multi_timeframe_builder.py  test_order_manager.py  test_predictor_missing_callback.py  test_predictor_sequence_model.py  test_predictor_weighted_ensemble.py  test_public_api_app.py  test_public_api_data_access.py  test_realtime_prices.py  test_risk_manager.py  test_run_bot_capital_total.py  test_run_bot_drift.py  test_run_bot_volatility.py  (+15 more)
(+20 files in other folders)
