[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bn-ml-trading-bot"
version = "0.1.0"
description = "Binance Spot ML trading bot with strict risk management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1.0",
  "numpy>=1.25.0",
  "scikit-learn>=1.3.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.1.0",
  "optuna>=3.5.0",
  "joblib>=1.3.0",
  "PyYAML>=6.0.1",
  "ccxt>=4.2.0",
  "streamlit>=1.41.0",
  "plotly>=5.18.0",
  "websocket-client>=1.8.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=7.4.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/san2stic/BN-ML"
Repository = "https://github.com/san2stic/BN-ML"
Issues = "https://github.com/san2stic/BN-ML/issues"

[project.scripts]
bnml-bot = "scripts.run_bot:main"
bnml-trainer = "scripts.run_trainer:main"
bnml-trainer-auto = "scripts.run_trainer_auto:main"
bnml-backtest = "scripts.run_backtest:main"
bnml-kill-switch = "scripts.kill_switch:main"
bnml-dod-check = "scripts.check_dod_daily:main"
bnml-dod-report = "scripts.generate_dod_report:main"
bnml-dod-30d = "scripts.run_dod_30d:main"
bnml-hardware-probe = "scripts.hardware_probe:main"
bnml-model-sync = "scripts.model_sync:main"
bnml-runpod-train = "scripts.runpod_train_only:main"
bnml-api = "public_api.app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bn_ml = ["assets/*.yaml"]
public_api = ["site/*.html", "site/*.css", "site/*.js", "site/*.svg"]

[tool.setuptools.packages.find]
include = ["bn_ml*", "data_manager*", "ml_engine*", "monitoring*", "public_api*", "scanner*", "scripts*", "trader*"]
